# mcpputil

./: .gitignore  CMakeLists.txt  LICENSE  README.md  setup.cmake
mcpputil/: CMakeLists.txt
mcpputil/include/mcpputil/mcpputil/: algorithm.hpp  aligned_allocator.hpp  alignment.hpp  allocator.hpp  backed_ordered_map.hpp  backed_ordered_map_impl.hpp  bandit.hpp  bitwise.hpp  clang_concurrency.hpp  concurrency.hpp  concurrency_apple.hpp  condition_variable.hpp  condition_variable_impl.hpp  container.hpp  container_functions.hpp  declarations.hpp  disable_unreachable_code_warning.hpp  enable_unreachable_code_warning.hpp  equipartition.hpp  flat_map_extrensic_allocator.hpp  flat_set_extrensic_allocator.hpp  function_iterator.hpp  intrinsics.hpp  iterator.hpp  literals.hpp  make_unique.hpp  memory_range.hpp  memory_range_group.hpp  memory_range_group_iterator.hpp  memory_range_impl.hpp  pointer_utils.hpp  posix_slab.hpp  posix_slab_impl.hpp  security.hpp  singleton.hpp  std.hpp  thread_id_manager.hpp  thread_local_pointer.hpp  timed_algorithm.hpp  to_json.hpp  (+7 more)
mcpputil/include/mcpputil/mcpputil/boost/: optional.hpp
mcpputil/include/mcpputil/mcpputil/boost/algorithm/string/: classification.hpp  predicate.hpp  split.hpp
mcpputil/include/mcpputil/mcpputil/boost/container/: flat_map.hpp  flat_set.hpp
mcpputil/include/mcpputil/mcpputil/boost/iterator/: zip_iterator.hpp
mcpputil/include/mcpputil/mcpputil/boost/log/: trivial.hpp
mcpputil/include/mcpputil/mcpputil/boost/property_tree/: json_parser.hpp  ptree.hpp  ptree_fwd.hpp
mcpputil/include/mcpputil/mcpputil/boost/range/: iterator_range.hpp
mcpputil/src/: allocator.cpp  container_functions.cpp  flat_map_extrensic_allocator.cpp  flat_set_extrensic_allocator.cpp  memory_range.cpp  pointer_utils.cpp  posix_slab.cpp  thread_id_manager.cpp  vector_extrensic_allocator.cpp  vector_utils.cpp  win32_slab.cpp
mcpputil_test/: CMakeLists.txt  flat_set_extrensic_allocator.cpp  main.cpp  memory_range_group.cpp  vector_extrensic_allocator.cpp
