IF("${CMAKE_SOURCE_DIR}" STREQUAL "${CMAKE_CURRENT_SOURCE_DIR}")
cmake_minimum_required(VERSION 2.8.1)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}")
include (setup.cmake)
find_path(GSL_INCLUDE_PATH gsl/gsl PATHS ../GSL/)
include_directories(${GSL_INCLUDE_PATH})
ENDIF()
add_subdirectory(mcpputil)
add_subdirectory(mcpputil_test)
